k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tallermgf
  namespace: tallermgf   # 👈 añade esto
  labels:
    app: tallermgf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tallermgf
  template:
    metadata:
      labels:
        app: tallermgf
    spec:
      containers:
      - name: tallermgf
        image: __IMAGE_PLACEHOLDER__
        ports:
        - containerPort: 5000
        resources:
          requests: { memory: "64Mi", cpu: "50m" }
          limits:   { memory: "128Mi", cpu: "100m" }
        livenessProbe:
          httpGet: { path: /health, port: 5000 }
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet: { path: /health, port: 5000 }
          initialDelaySeconds: 5
          periodSeconds: 5
