k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tallermgf-svc
  namespace: tallermgf
spec:
  selector:
    app: tallermgf-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
  type: NodePort
